tests/include/include.exp
Error: ../foo/batman/baz.js:3
  3: var x: number = "not a number" // Error string ~> number
                     ^^^^^^^^^^^^^^ string. This type is incompatible with
  3: var x: number = "not a number" // Error string ~> number
            ^^^^^^ number

Error: ../included/test.js:1
  1: (123: string);
      ^^^ Cannot cast `123` to string because number [1] is incompatible with string [2].
  References:
    1: (123: string);
        ^^^ [1]: number
    1: (123: string);
             ^^^^^^ [2]: string


Found 2 errors
